# Discord-Big-File-Sender-Without-Nitro

./: .gitignore  DiscordBigFileUploader.sln  README.md
DiscordBigFileUploader/: App.xaml  App.xaml.cs  DiscordBigFileUploader.csproj  MainWindow.xaml  MainWindow.xaml.cs
DiscordBigFileUploader/Properties/: Settings.Designer.cs
src/: app.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs
