[package]
name = "discord-file-sender"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "discord_file_sender_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "rustls", "default-tls"] }
tokio = { version = "1.50.0", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
zlib-rs = "0.6.3"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
tar = "0.4.45"
walkdir = "2.5.0"
url = "2.5.8"

